--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>Petgram</title>
 </head>
 <body>
-    <div id="root"></div>    
+    <div id="root"></div>
+    <noscript>This app needs Jacascript enabled to work</noscript>
 </body>
 </html>
